Test version with socket for app connection Information on website

--- a/Server/Backend.Test/wwwroot/index.html
+++ b/Server/Backend.Test/wwwroot/index.html
@@ -6,10 +6,27 @@
 	<base href="/">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="icon" type="image/x-icon" href="favicon.ico">
+	<link rel="manifest" href="manifest.json">
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
-<link href="styles.544624cd7b67f16895bf.bundle.css" rel="stylesheet"/></head>
+<link href="styles.64431b6f3d328b1f00ae.bundle.css" rel="stylesheet"/></head>
 <body>
-	<app-root></app-root>
-<script type="text/javascript" src="inline.db29d0291c9683735b6a.bundle.js"></script><script type="text/javascript" src="polyfills.09158b60d0e36db25d11.bundle.js"></script><script type="text/javascript" src="main.a3ad02d1468458354b15.bundle.js"></script></body>
+<app-root></app-root>
+<script>
+	(function(i, s, o, g, r, a, m) {
+		i['GoogleAnalyticsObject'] = r;
+		i[r] = i[r] ||
+			function() {
+				(i[r].q = i[r].q || []).push(arguments);
+			}, i[r].l = 1 * new Date();
+		a = s.createElement(o),
+			m = s.getElementsByTagName(o)[0];
+		a.async = 1;
+		a.src = g;
+		m.parentNode.insertBefore(a, m);
+	})(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
+
+	ga('create', 'UA-91552321-2', 'auto');
+</script>
+<script type="text/javascript" src="inline.9d8871176898a6ea9698.bundle.js"></script><script type="text/javascript" src="polyfills.48e375cda402c73fc7cc.bundle.js"></script><script type="text/javascript" src="main.f82662eb4df8af95b0cc.bundle.js"></script></body>
 </html>
