--- a/Server/Frontend/src/index.html
+++ b/Server/Frontend/src/index.html
@@ -2,13 +2,16 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>MatchmakingMonitor</title>
+	<title>World of Warships - Matchmaking Monitor</title>
 	<base href="/">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="icon" type="image/x-icon" href="favicon.ico">
 	<link rel="manifest" href="manifest.json">
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
+	<meta name="keywords" 
+	      content="world of warships, matchmaking monitor, statistics, matchmaking, monitor">
+	<meta name="description" content="View the stats of all the players and their current ships in your match!">
 </head>
 <body>
 <app-root></app-root>
